compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__same_imports_multiple_times.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        import rakun/wibble.{wobble}\n        import rakun/wibble.{zoo}\n        pub fn go() { wobble() + zoo() }\n        "
---
error: Duplicate import
  ┌─ /src/one/two.rakun:2:9
  │
2 │         import rakun/wibble.{wobble}
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ First imported here
3 │         import rakun/wibble.{zoo}
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Reimported here

`wibble` has been imported multiple times.
Names in a Rakun module must be unique so one will need to be renamed.

error: Unknown variable
  ┌─ /src/one/two.rakun:4:34
  │
4 │         pub fn go() { wobble() + zoo() }
  │                                  ^^^

The name `zoo` is not in scope here.
